Cherry-pick Metaswitch-specific Rust test changes
